# mix_maker

./: .gitignore  README.md  main.py  pyproject.toml  trial.py
logs/: log_2026-05-31.txt
output/: cinematic_indian_tantra_music.json  lo_fi_orchestral_cinematic_music_with_dynamic_.json
src/core/: mix_maker.py  variation_engine.py
src/prompts/: style_prompts.json  system_prompt.txt
src/provider/: llm.py  music_generator.py
src/ui/: interface.py  theme.py
src/ui/components/: header.py  inputs.py  logger.py  music_panel.py  output.py  progress.py
src/utils/: exception.py  load_json.py  logger.py  text.py
src/utils/prompts_utils/: style_retriever.py
