[project]
name = "mix-maker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.7.0",
    "openai>=2.38.0",
    "openrouter>=0.9.1",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]

[project.scripts]
mixmaker = "src.ui.interface:run_pipeline_cli"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages  = ["src"]
artifacts = [".env"]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"